<resources>
    <string name="app_name">PickEat</string>

    <!--Toolbar Titles-->
    <string name="toolbar_mainscreen_title">PickEat</string>

    <!--Main Screen-->
    <string name="main_title_text">Hungry and don\'t know what to eat?</string>
    <string name="main_description_text">Thats why we are here! Just hit the button and we \n find you exactly what you want! \n What your waiting for? Click it!</string>
    <string name="main_pickeat_text">PickEat</string>
    <string name="main_advanced_settings_text">Advanced \n Settings</string>

    <!--Content Description Texts-->
    <string name="advanced_settings_button">Advanced settings button</string>
    <string name="pick_eat_main_circle">PickEat Main Circle</string>
    <string name="google_signin_failed">Google Sign In has Failed.</string>

    <string name="advanced_settings_title">
        So\, it\'s dinner time, and once again you have no idea what to eat? \n This is the reason we are here!
    </string>
    <string name="advanced_settings_desc"> Answer this question and within minutes \n you\'ll be cooking your dinner! </string>

    <string name="advanced_btn_txt">Let\'s Start</string>
    <string name="pickeat_experience">Pick Eat Experience</string>
    <string name="quickpick">Quick Pick</string>
    <string name="sign_in_with_google">Sign In with Google</string>

    <!--Optional Question Fragment-->
    <string name="ingredients_question">Do you want to make \nfood from ingredients \nyou have at home?</string>
    <string name="ingredients_message">You can skip this level if you want</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="optional_skip">SKIP</string>

    <string name="question_text">Question Text</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="main_screen_title">Hi Stranger!</string>
    <string name="main_screen_message">Let me guess, you\'re\nout of ideas again.\n\nLet PickEat find them\nfor you!</string>


</resources>
