<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_advanced_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="pickeat.com.pickeat.ui.AdvancedSettings">

    <include layout="@layout/transparent_toolbar" />


    <TextView
            android:id="@+id/advanced_settings_title_text"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/advanced_settings_title"
            android:layout_below="@+id/toolbar_layout"
            android:gravity="center"
            android:layout_centerHorizontal="true"/>

      <TextView
           android:id="@+id/advanced_settings_desc_text"
           style="@style/DescriptionText"
           android:layout_below="@+id/toolbar_layout"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="100dp"
           android:layout_marginBottom="30dp"
           android:text="@string/advanced_settings_desc"
           android:gravity="center"
           android:layout_centerHorizontal="true"/>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/advanced_settings_desc_text">
        <Button
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@color/colorOrange"
            android:text="@string/advanced_btn_txt"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>


</RelativeLayout>
